Fixed spacing issues in products.html

--- a/css/main_new.css
+++ b/css/main_new.css
@@ -45,6 +45,11 @@ h2{
     color:#1BA1E2;
 }
 
+a{
+    text-decoration: none;
+    color:#1BA1E2;
+}
+
 /*
  * Remove the gap between images, videos, audio and canvas and the bottom of
  * their containers: h5bp.com/i/440
@@ -94,22 +99,13 @@ body {
     background-image: url("../img/bg.jpg");
 }
 
-a {
-    text-decoration: none;
-    color:#1BA1E2;
-}
-
-/*.infohead {
+.infohead {
     font-family: "Segoe UI Light", sans-serif, arial;
     color: #1BA1E2;
     font-size: 24px;
-}*/
-
-#logohead {
-    float: left
 }
 
-#header_logo {
+#headlogo {
     float: left;
     width: 84px;
     height: 84px;
@@ -140,7 +136,7 @@ header .headtext {
 
 nav hgroup a {
     display: inline;
-    padding: 35px 0.5% 17px;
+    padding: 35px .75% 17px;
     font-size: 24px;
     color: #fff;
     text-decoration: none !important;
@@ -210,7 +206,6 @@ article {
 }
 
 #main_content .offset_big_left article, #main_content .offset_big_right article {
-    min-height: 272px;
     width: 568px;
 }
 
@@ -219,10 +214,10 @@ article {
 }
 
 #main_content .offset_little_right, #main_content .offset_big_right {
-    float: left;
+    float: right;
 }
 
-#main_content .offset_little_right article, #main_content .offset_little_left article {
+#main_content .offset_little_right article, #main_content .offset_little_right article {
     width: 272px;
     margin: 0 0 24px;
 }
@@ -239,7 +234,7 @@ article {
     margin: 0 24px 24px;
 }
 
-#category {
+#catagory{
     background-color: #fff;
 }
 
@@ -280,6 +275,8 @@ article div table tr td{
     overflow: hidden;
 }
 
+
+
 #navside_content aside {
     width: 272px;
     margin: 0 0 24px 24px;
@@ -312,7 +309,7 @@ article div table tr td{
     padding: 12px 24px;
     background-color: #1BA1E2;
     color: #fff;
-    margin: 0 0 0 12px;
+    margin: 0 0 0 24px;
     text-decoration: none !important;
 }
 
@@ -331,7 +328,7 @@ article div table tr td{
     padding: 12px;
     background-color: #fff;
     color: #222;
-    margin: 0 0 0 36px;
+    margin: 0 0 0 48px;
     text-decoration: none !important;
 }
 
@@ -363,11 +360,11 @@ article div table tr td{
 #navside_content #description article {
     font-family: "Segoe UI", sans-serif, arial;
     float: left;
-    margin: 24px 0 0 24px;
+    margin: 24px 0 24px 24px;
     padding: 12px;
     background-color: #fff;
     width: 260px;
-    min-height: 236px;
+    height: 236px;
     color: #222;
     overflow: hidden;
     font-size: 12px;
@@ -377,12 +374,7 @@ article div table tr td{
     float: right;
     height: 260px;
     width: 260px;
-    margin: 24px 24px 0;
-}
-
-#product_picture img {
-    height: 260px;
-    width: 260px;
+    margin: 24px;
 }
 
 #navside_content article {
@@ -442,56 +434,8 @@ footer table a{
     float: right;
 }
 
-@media only screen and (max-width: 1024px) {
 
-    header {
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-    }
 
-    #logohead {
-        float: none;
-        width: 100%;
-        background-color: #1BA1E2;
-    }
-
-    nav {
-        padding: 12px 0;
-        display: block;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    nav a img {
-        margin: 12px 0;
-        float: none;
-    }
-
-    hgroup {
-        display: block;
-    }
-
-    nav hgroup a {
-        padding: 12px 0;
-        text-align: center;
-        display: block;
-    }
-
-    #main_content {
-        margin: 0;
-        width: 100%;
-        -webkit-box-shadow: none;
-        -moz-box-shadow: none;
-        box-shadow: none;
-    }
-
-    #main_content .headtext {
-        width: 100%;
-        padding: 0 0 0 24px;
-    }
-
-}
 
 @media only screen and (min-width: 1280px) {
 
@@ -502,19 +446,6 @@ footer table a{
     #navside_content aside {
         width: 296px;
     }
-
-    #navside_content aside .headtext {
-        width: 272px;
-    }
-
-    #product_series {
-        margin: 0 0 0 24px;
-    }
-
-    #product_entry {
-        margin: 0 0 0 48px;
-    }
-
 
 }
 
